Bug 349647 - Close button on active tab jumps up by a pixel or two. r+a=mconnor.

--- a/mozilla/toolkit/themes/winstripe/global/browser.css
+++ b/mozilla/toolkit/themes/winstripe/global/browser.css
@@ -24,8 +24,8 @@
   -moz-appearance: none !important;
   -moz-binding: url("chrome://global/skin/globalBindings.xml#tabbrowser-tab") !important;
   background: transparent !important;
-  margin: 0px;
-  padding: 0px;
+  margin: 0px  !important;
+  padding: 0px !important;
   border: none !important;
   height: 22px !important;
   margin-bottom: 1px;
@@ -35,14 +35,8 @@
   padding-top: 1px;
 }
 
-.tabbrowser-tab[selected="true"] > .tab-image-middle {
+.tabbrowser-tab > .tab-image-middle {
   -moz-padding-start: 1px;
-}
-
-.tabbrowser-tab[selected="true"] > * {
-  padding-bottom: 1px;
-  padding-top: 0;
-  margin-bottom: 1px;
 }
 
 .tabbrowser-tab[busy] > .tab-image-middle > .tab-icon > .tab-icon-image {
@@ -52,7 +46,6 @@
 
 .tabbrowser-tab[selected="true"] {
   font-weight: bold;
-  margin-bottom: 0px;
 }
 
 .tabbrowser-tab[selected="true"] > .tab-image-middle > .tab-text {
@@ -171,6 +164,7 @@ tabpanels {
  */
 .tab-close-button > .toolbarbutton-icon {
   -moz-margin-end: 0px !important;
+  margin-top: 1px;
 }
 
 .tab-close-button {
@@ -215,7 +209,6 @@ tabpanels {
 }
 
 .tabbrowser-tab[selected="true"] > .tab-close-button {
-  margin-top: 0px;
   opacity: 1.0;
   -moz-image-region: rect(0px, 16px, 16px, 0px);
   /* Make this button focusable so clicking on it will not focus the tab while
